Fix browser section not scrolling on iOS

--- a/default.css
+++ b/default.css
@@ -148,17 +148,19 @@ section.right {
 
 /* Browser */
 section.browser {
-  display: flex;
   background-color: rgba(0,0,0,0.7);
   box-shadow: 2px 2px 16px black;
   color: var(--primary);
+  display: grid;
+  grid-template-columns: minmax(0, 1fr);
+  grid-template-rows: auto minmax(0, 1fr);
   flex-direction: column;
   width: 100%;
   min-width: 100%;
+  height: 100%;
   padding: .5em;
 }
 nav.browser-items {
-  height: 100%;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
